--- a/API/API.csproj
+++ b/API/API.csproj
@@ -17,11 +17,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 
-    <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+    <!-- <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.1.0-dev-02304" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
-    
+     -->
+     
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.1-dev-00953" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="3.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.9.0" />
