--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -27,6 +27,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data source=dating.db"
+    "DefaultConnection" : "Server=tcp:dating-app-htec-intern.database.windows.net,1433;Initial Catalog=DatingAppDB;Persist Security Info=False;User ID=appuser;Password=Mujalo64!123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
